--- a/index.html
+++ b/index.html
@@ -4,14 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -32,10 +26,20 @@
 
         <ul class="list container-contacts">
           <li class="item-header mail-top">
-            <a href="mailto:info@devstudio.com" class="link header-mail">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com" class="link header-mail">
+              <svg class="mail-svg" height="12px" widt="16px">
+                <use class="mail-svg-hover" href="./images/sprite.svg#icon-envelope"></use>
+              </svg>
+              info@devstudio.com
+            </a>
           </li>
           <li class="item-header contacts-top">
-            <a href="tel:+380961111111" class="link header-cont">+38 096 111 11 11</a>
+            <a href="tel:+380961111111" class="link header-cont">
+              <svg class="contacts-svg" height="16px" widt="10px">
+                <use class="contacts-svg-hover" href="./images/sprite.svg#icon-phone"></use>
+              </svg>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -55,25 +59,41 @@
         <div class="container">
           <ul class="act list">
             <li class="item-activity icon-satellite">
+              <div class="activity-svg">
+                <svg height="70px" widt="70px">
+                  <use href="./images/sprite.svg#icon-satellite"></use>
+                </svg>
+              </div>
               <h3 class="activity">Внимание к деталям</h3>
               <p class="act-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
             </li>
 
             <li class="item-activity icon-clock">
+              <div class="activity-svg">
+                <svg height="70px" widt="70px">
+                  <use href="./images/sprite.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="activity">Пунктуальность</h3>
-              <p class="act-text">
-                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
-              </p>
+              <p class="act-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
             </li>
 
             <li class="item-activity icon-computer">
+              <div class="activity-svg">
+                <svg height="70px" widt="70px">
+                  <use href="./images/sprite.svg#icon-computer"></use>
+                </svg>
+              </div>
               <h3 class="activity">Планирование</h3>
-              <p class="act-text">
-                Равным образом консультация с широким активом в значительной степени обуславливает.
-              </p>
+              <p class="act-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
             </li>
 
             <li class="item-activity icon-astronaut">
+              <div class="activity-svg">
+                <svg height="70px" widt="70px">
+                  <use href="./images/sprite.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="activity">Современные технологии</h3>
               <p class="act-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
             </li>
@@ -109,6 +129,28 @@
                 <h2 class="teams-name">Игорь Демьяненко</h2>
                 <p class="team-profession">Product Designer</p>
               </div>
+              <div class="socialnetworks">
+                <a class="socialnetworks-links" href="https://instagram.com/" target="_blank" rel="noopener noreferer" aria-label="ccылка Instagram">
+                  <svg class="socialnetworks-icon">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a class="socialnetworks-links" href="https://twitter.com/" target="_blank" rel="noopener noreferer" aria-label="ссылка Twitter">
+                  <svg class="socialnetworks-icon">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a class="socialnetworks-links" href="https://facebook.com/" target="_blank" rel="noopener noreferer" aria-label="ссылка Facebook">
+                  <svg class="socialnetworks-icon">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+                <a class="socialnetworks-links" href="https://linkedin.com/" target="_blank" rel="noopener noreferer" aria-label="ссылка Linkedin">
+                  <svg class="socialnetworks-icon">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
 
             <li class="item-team">
@@ -119,10 +161,26 @@
                 <p class="team-profession">Frontend Developer</p>
               </div>
               <div class="socialnetworks">
-                <a href="" class="instagram"></a>
-                <a href="" class="twitter"></a>
-                <a href="" class="facebook"></a>
-                <a href="" class="linkedin"></a>
+                <a class="socialnetworks-links" href="https://instagram.com/" target="_blank" rel="noopener noreferer" aria-label="ccылка Instagram">
+                  <svg class="socialnetworks-icon">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a class="socialnetworks-links" href="https://twitter.com/" target="_blank" rel="noopener noreferer" aria-label="ссылка Twitter">
+                  <svg class="socialnetworks-icon">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a class="socialnetworks-links" href="https://facebook.com/" target="_blank" rel="noopener noreferer" aria-label="ссылка Facebook">
+                  <svg class="socialnetworks-icon">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+                <a class="socialnetworks-links" href="https://linkedin.com/" target="_blank" rel="noopener noreferer" aria-label="ссылка Linkedin">
+                  <svg class="socialnetworks-icon">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </div>
             </li>
 
@@ -133,6 +191,28 @@
                 <h2 class="teams-name">Николай Тарасов</h2>
                 <p class="team-profession">Marketing</p>
               </div>
+              <div class="socialnetworks">
+                <a class="socialnetworks-links" href="https://instagram.com/" target="_blank" rel="noopener noreferer" aria-label="ccылка Instagram">
+                  <svg class="socialnetworks-icon">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a class="socialnetworks-links" href="https://twitter.com/" target="_blank" rel="noopener noreferer" aria-label="ссылка Twitter">
+                  <svg class="socialnetworks-icon">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a class="socialnetworks-links" href="https://facebook.com/" target="_blank" rel="noopener noreferer" aria-label="ссылка Facebook">
+                  <svg class="socialnetworks-icon">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+                <a class="socialnetworks-links" href="https://linkedin.com/" target="_blank" rel="noopener noreferer" aria-label="ссылка Linkedin">
+                  <svg class="socialnetworks-icon">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
+              </div>
             </li>
 
             <li class="item-team">
@@ -141,6 +221,28 @@
 
                 <h2 class="teams-name">Михаил Ермаков</h2>
                 <p class="team-profession">UI Designer</p>
+              </div>
+              <div class="socialnetworks">
+                <a class="socialnetworks-links" href="https://instagram.com/" target="_blank" rel="noopener noreferer" aria-label="ccылка Instagram">
+                  <svg class="socialnetworks-icon">
+                    <use href="./images/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
+                <a class="socialnetworks-links" href="https://twitter.com/" target="_blank" rel="noopener noreferer" aria-label="ссылка Twitter">
+                  <svg class="socialnetworks-icon">
+                    <use href="./images/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+                <a class="socialnetworks-links" href="https://facebook.com/" target="_blank" rel="noopener noreferer" aria-label="ссылка Facebook">
+                  <svg class="socialnetworks-icon">
+                    <use href="./images/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+                <a class="socialnetworks-links" href="https://linkedin.com/" target="_blank" rel="noopener noreferer" aria-label="ссылка Linkedin">
+                  <svg class="socialnetworks-icon">
+                    <use href="./images/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </div>
             </li>
           </ul>
@@ -151,12 +253,48 @@
         <div class="container">
           <h2 class="title-client">Постоянные клиенты</h2>
           <ul class="list client-list">
-            <li class="client logo1"></li>
-            <li class="client logo2"></li>
-            <li class="client logo3"></li>
-            <li class="client logo4"></li>
-            <li class="client logo5"></li>
-            <li class="client logo6"></li>
+            <li class="client">
+              <a class="client-links" href="https://icon-logo1.com/" target="_blank" rel="noopener noreferer" aria-label="ссылка icon-logo1">
+                <svg class="client-color" width="44.27" height="49.23">
+                  <use href="./images/sprite.svg#icon-logo1"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client">
+              <a class="client-links" href="https://icon-logo1.com/" target="_blank" rel="noopener noreferer" aria-label="ссылка icon-logo2">
+                <svg class="client-color" width="40" height="52">
+                  <use href="./images/sprite.svg#icon-logo2"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client">
+              <a class="client-links" href="https://icon-logo3.com/" target="_blank" rel="noopener noreferer" aria-label="ссылка icon-logo3">
+                <svg class="client-color" width="41" height="42.6">
+                  <use href="./images/sprite.svg#icon-logo3"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client">
+              <a class="client-links" href="https://icon-logo4.com/" target="_blank" rel="noopener noreferer" aria-label="ссылка icon-logo4">
+                <svg class="client-color" width="79.66" height="42.02">
+                  <use href="./images/sprite.svg#icon-logo4"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client">
+              <a class="client-links" href="https://icon-logo5.com/" target="_blank" rel="noopener noreferer" aria-label="ссылка icon-logo5">
+                <svg class="client-color" width="59" height="47">
+                  <use href="./images/sprite.svg#icon-logo5"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="client">
+              <a class="client-links" href="https://icon-logo6.com/" target="_blank" rel="noopener noreferer" aria-label="ссылка icon-logo6">
+                <svg class="client-color" width="88.48" height="45.44">
+                  <use href="./images/sprite.svg#icon-logo6"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
         </div>
       </section>
@@ -165,28 +303,51 @@
     <!--Футер-->
 
     <footer class="footer-bg logo-box">
-      <div class="container">
-        <a href="" class="logo-footer">Web<span class="studio-cl-2">Studio</span></a>
+      <div class="container footer-flex">
+        <div class="none">
+          <a href="" class="logo-footer">Web<span class="studio-cl-2">Studio</span></a>
 
-        <address>
-          <ul class="list footer-contacts">
-            <li>
-              <a
-                href="https://goo.gl/maps/nbsRifXUNLBTFQnN9"
-                target="blank"
-                rel="noopener noreferer"
-                class="link footer-target"
-                >г. Киев, пр-т Леси Украинки, 26</a
-              >
-            </li>
-            <li>
-              <a href="mailto:info@example.com" class="link footer-mail">info@example.com</a>
-            </li>
-            <li>
-              <a href="tel:+380991111111" class="link footer-tel">+38 099 111 11 11</a>
-            </li>
-          </ul>
-        </address>
+          <address>
+            <ul class="list footer-contacts">
+              <li>
+                <a href="https://goo.gl/maps/nbsRifXUNLBTFQnN9" target="blank" rel="noopener noreferer" class="link footer-target"
+                  >г. Киев, пр-т Леси Украинки, 26</a
+                >
+              </li>
+              <li>
+                <a href="mailto:info@example.com" class="link footer-mail">info@example.com</a>
+              </li>
+              <li>
+                <a href="tel:+380991111111" class="link footer-tel">+38 099 111 11 11</a>
+              </li>
+            </ul>
+          </address>
+        </div class="none">
+        
+
+        <div class="socialnetworcs socialnetworcs-footer">
+          <h2 class="socialnetworcs-title">Присоединяйтесь</h2>
+          <a class="socialnetworks-links-footer" href="https://instagram.com/" target="_blank" rel="noopener noreferer" aria-label="ccылка Instagram">
+            <svg class="socialnetworks-icon-footer">
+              <use href="./images/sprite.svg#icon-instagram"></use>
+            </svg>
+          </a>
+          <a class="socialnetworks-links-footer" href="https://twitter.com/" target="_blank" rel="noopener noreferer" aria-label="ссылка Twitter">
+            <svg class="socialnetworks-icon-footer">
+              <use href="./images/sprite.svg#icon-twitter"></use>
+            </svg>
+          </a>
+          <a class="socialnetworks-links-footer" href="https://facebook.com/" target="_blank" rel="noopener noreferer" aria-label="ссылка Facebook">
+            <svg class="socialnetworks-icon-footer">
+              <use href="./images/sprite.svg#icon-facebook"></use>
+            </svg>
+          </a>
+          <a class="socialnetworks-links-footer" href="https://linkedin.com/" target="_blank" rel="noopener noreferer" aria-label="ссылка Linkedin">
+            <svg class="socialnetworks-icon-footer">
+              <use href="./images/sprite.svg#icon-linkedin"></use>
+            </svg>
+          </a>
+        </div>
       </div>
     </footer>
   </body>
